app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quemeusou
  namespace: quemeusou
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quemeusou
  template:
    metadata:
      labels:
        app: quemeusou
    spec:
      containers:
      - name: container-whoami
        image: traefik/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: quemeusou
  namespace: quemeusou
spec:
  selector:
    app: quemeusou
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meu-nginx
  namespace: quemeusou
spec:
  replicas: 3
  selector:
    matchLabels:
      app: meu-nginx
  template:
    metadata:
      labels:
        app: meu-nginx
    spec:
      containers:
      - name: container-nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: meu-nginx
  namespace: quemeusou
spec:
  selector:
    app: meu-nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quemeusou-ingress
  namespace: quemeusou
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quemeusou
            port:
              number: 80
      - path: /site
        pathType: Prefix
        backend:
          service:
            name: meu-nginx
            port:
              number: 80
